examples/test/testpolicy3108.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3108
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key9: value27
      key29: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value10
      podSelector:
        matchLabels:
          key39: value25
          key11: value20
